--- a/SEInventorySystem/SEInventorySystem.csproj
+++ b/SEInventorySystem/SEInventorySystem.csproj
@@ -39,6 +39,7 @@
   <Import Project="MDK/MDK.paths.props" Condition="exists('MDK/MDK.paths.props')" />
   <ItemGroup>
     <Compile Include="AssemblerGroup.cs" />
+    <Compile Include="LabelConverter.cs" />
     <Compile Include="MDK\Bootstrapper.cs" />
     <AdditionalFiles Include="MDK\MDK.options.props">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
